# verge

./: .gitignore  BUILD.md  CLAUDE.md  Cargo.toml  DISCUSSION.md  MIGRATION-MUT-REF.md  ascii_utils.rs  fold.rs  fs.rs  nt.rs  open.rs  verge.rs
.claude/agents/: verus-changelog.md
.claude/skills/update-dev-doc/: SKILL.md
docs/api/: README.md  clone.md  cmp.md  env.md  error.md  fs.md  index.md  io.md  iter.md  mem.md  nt.md  str.md
docs/api/fs/: metadata.md  path.md
docs/api/io/: stdio.md
docs/api/nt/: gcd.md  totient.md  util.md
docs/api/set/: cart.md  fold.md
docs/api/str/: ascii.md  fmt.md  iter.md  parse.md  string.md
docs/changelogs/: verus-0.2026.05.13.fae8859.md
fs/: std_fs.rs
nt/: gcd.rs  totient.rs  util.rs
open/: seq.rs
tools/: fetch_verus_guide.py  fetch_vstd_docs.py  generate_verge_docs.py  generate_vstd_md.py  process_verus_guide.py  release.sh  update-verus.sh  vstd_diff.py
verge_lib/: Cargo.toml  ascii_string.rs  clone.rs  cmp.rs  env.rs  error.rs  fs.rs  io.rs  iter.rs  mem.rs  mut_ref.rs  nt.rs  open.rs  prelude.rs  range.rs  set.rs  str.rs  verge.rs
verge_lib/docs/internal/: DEV.md  MACRO-LIMITATIONS.md  SPEC-GUIDE.md
verge_lib/fs/: metadata.rs  path.rs
verge_lib/io/: impls.rs  stdio.rs
verge_lib/nt/: inf.rs  totient.rs  util.rs
verge_lib/open/: bytes.rs  set.rs
verge_lib/set/: cart.rs
verge_lib/str/: ascii.rs  fmt.rs  iter.rs  parse.rs  string.rs
verge_macros/: Cargo.toml  run_tests.sh
verge_macros/src/: derive_clone.rs  derive_copy.rs  derive_default.rs  derive_eq.rs  derive_ord.rs  derive_partial_eq.rs  derive_partial_ord.rs  eq_common.rs  hash_key.rs  lib.rs  open_macro.rs
verge_macros/tests/test_project/: Cargo.toml
verge_macros/tests/test_project/src/: compose.rs  derive_clone.rs  derive_copy.rs  derive_default.rs  derive_eq.rs  derive_ord.rs  derive_partial_eq.rs  derive_partial_ord.rs  end_to_end.rs  hash_key.rs  lib.rs
