[package]
name = "verge"
version = "0.0.0-2026-03-26"
edition = "2024"
license = "MIT"
description = "Verge Library: Sound specifications and lemmas for Verus"
keywords = ["verus", "verified-rust", "verification"]
categories = ["development-tools"]

[lib]
name = "verge"
path = "verge.rs"

[dependencies]
vstd = "0.0.0-2026-03-22-0106"

[package.metadata.verus]
verify = true