[package]
name = "verge"
version = "0.0.0-2026-03-26"
edition = "2024"
license = "MIT"
description = "Verge Library: Sound specifications and lemmas for Verus"
keywords = ["verus", "verified-rust", "verification"]
categories = ["development-tools"]

[lib]
name = "verge"
path = "verge.rs"

[dependencies]
vstd = "=0.0.0-2026-04-12-0118"
verus_builtin = "=0.0.0-2026-04-12-0118"
verus_builtin_macros = "=0.0.0-2026-04-12-0118"
verge_macros = { path = "../verge_macros" }

[package.metadata.verus]
verify = true