[package]
name = "verge_macros"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Macros in the Verge Library"
keywords = ["verus", "verified-rust", "verification"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.39"